--- a/.travis.yml
+++ b/.travis.yml
@@ -13,15 +13,15 @@ env:
 #    - ANDROID_TARGET=android-23 ANDROID_ABI=armeabi-v7a #currently broken in Travis
 #    - ANDROID_TARGET=android-24                         #currently doesnt have an ABI
 
-notifications:
-  email:
-    recipients:
-      - chuna@msoe.edu
-      - kuczynskij@msoe.edu
-      - leonardj@msoe.edu
-      - farrowc@msoe.edu
-    on_success: change
-    on_failure: change
+#notifications:
+#  email:
+#    recipients:
+#      - chuna@msoe.edu
+#      - kuczynskij@msoe.edu
+#      - leonardj@msoe.edu
+#      - farrowc@msoe.edu
+#    on_success: change
+#    on_failure: change
 
 android:
   components:
@@ -38,7 +38,7 @@ before_install:
 before_script:
   - android list targets
   - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-  - emulator -avd test -no-skin -no-audio -no-window &
+  - emulator -avd test -no-audio &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
