--- a/.travis.yml
+++ b/.travis.yml
@@ -41,12 +41,13 @@ before_script:
   - emulator -avd test -no-skin -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
+  - adb shell settings put secure show_ime_with_hard_keyboard 0
 
 script:
   - ./gradlew build jacocoTestReport assembleAndroidTest
   - ./gradlew connectedAndroidTest -PdisablePreDex --continue --stacktrace
   - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
-  - ./gradlew connectedCheck
+  - ./gradlew connectedCheck -PdisablePreDex --continue --stacktrace
 
 after_success:
    - bash <(curl -s https://codecov.io/bash)
