--- a/.travis.yml
+++ b/.travis.yml
@@ -44,8 +44,8 @@ before_script:
   - adb shell settings put secure show_ime_with_hard_keyboard 0
 
 script:
-  - ./gradlew build jacocoTestReport assembleAndroidTest
-  - ./gradlew connectedAndroidTest -PdisablePreDex --continue --stacktrace
+#  - ./gradlew build jacocoTestReport assembleAndroidTest
+#  - ./gradlew connectedAndroidTest -PdisablePreDex --continue --stacktrace
   - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
   - ./gradlew connectedCheck -PdisablePreDex --continue --stacktrace
 
