--- a/.travis.yml
+++ b/.travis.yml
@@ -13,15 +13,15 @@ env:
 #    - ANDROID_TARGET=android-23 ANDROID_ABI=armeabi-v7a #currently broken in Travis
 #    - ANDROID_TARGET=android-24                         #currently doesnt have an ABI
 
-#notifications:
-#  email:
-#    recipients:
-#      - chuna@msoe.edu
-#      - kuczynskij@msoe.edu
-#      - leonardj@msoe.edu
-#      - farrowc@msoe.edu
-#    on_success: change
-#    on_failure: change
+notifications:
+  email:
+    recipients:
+      - chuna@msoe.edu
+      - kuczynskij@msoe.edu
+      - leonardj@msoe.edu
+      - farrowc@msoe.edu
+    on_success: change
+    on_failure: change
 
 android:
   components:
@@ -44,8 +44,6 @@ before_script:
   - adb shell settings put secure show_ime_with_hard_keyboard 0
 
 script:
-#  - ./gradlew build jacocoTestReport assembleAndroidTest
-#  - ./gradlew connectedAndroidTest -PdisablePreDex --continue --stacktrace
   - adb shell setprop dalvik.vm.dexopt-flags v=n,o=v
   - ./gradlew connectedCheck -PdisablePreDex --continue --stacktrace
 
