--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,15 +8,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.MainMenuActivity" />
-        <activity android:name=".Activities.EndOfGameplayActivity" />
-        <activity android:name=".Activities.NewGameSettingsActivity" >
+        <activity android:name=".Activities.MainMenuActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Activities.EndOfGameplayActivity" />
+        <activity android:name=".Activities.NewGameSettingsActivity" />
         <activity android:name=".Activities.GamePlayActivity"></activity>
     </application>
 
