abstracted out some of the wifi stuff so it is in its own activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.seniordesign.wolfpack.quizinator">
 
-    <uses-sdk android:minSdkVersion="15" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
@@ -11,7 +10,7 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <!-- Market filtering -->
-    <uses-feature android:name="android.hardware.wifi.direct" android:required="true"/>
+    <uses-feature android:name="android.hardware.wifi.direct" android:required="true" />
 
     <application
         android:name=".WifiDirect.WifiDirectApp"
@@ -22,10 +21,11 @@
         android:theme="@style/AppTheme">
         <activity android:name=".Activities.EndOfGameplayActivity" />
         <activity android:name=".Activities.NewGameSettingsActivity" />
-        <activity android:name=".Activities.GamePlayActivity"
+        <activity android:name=".Activities.HostGameActivity" />
+        <activity
+            android:name=".Activities.GamePlayActivity"
             android:label="@string/title_activity_navigation_drawer"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".Activities.MainMenuActivity"
             android:label="@string/title_activity_navigation_drawer"
@@ -46,8 +46,7 @@
             </intent-filter>
         </receiver>
 
-        <service android:enabled="true" android:name=".WifiDirect.ConnectionService" />
-
+        <service android:name=".WifiDirect.ConnectionService" android:enabled="true" />
     </application>
 
 </manifest>
