--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,7 +67,8 @@
             android:name=".WifiDirect.ConnectionService"
             android:enabled="true" />
 
-        <activity android:name=".Activities.MultiplayerGameplayActivity"></activity>
+        <activity android:name=".Activities.MultiplayerGameplayActivity" />
+        <activity android:name=".Activities.ManageGameplayActivity"></activity>
     </application>
 
 </manifest>
