multi select spinner

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.android.support:support-v4:24.2.1'
+    compile 'io.apptik.widget:multiselectspinner:1.0.12'
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
 }
