--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,7 +68,7 @@
             android:enabled="true" />
 
         <activity android:name=".Activities.ManageGameplayActivity" />
-        <activity android:name=".Activities.CardCreationActivity"></activity>
+        <activity android:name=".Activities.CardsActivity"></activity>
     </application>
 
 </manifest>
