created the CardAdapter and added the icons. still need to do the database calls and filtered calls

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,7 +68,8 @@
             android:enabled="true" />
 
         <activity android:name=".Activities.ManageGameplayActivity" />
-        <activity android:name=".Activities.CardsActivity"></activity>
+        <activity android:name=".Activities.CardsActivity" />
+        <activity android:name=".Activities.EditCardActivity"></activity>
     </application>
 
 </manifest>
