Added button to show decks, added activities for showing decks and editting decks, added button for new deck

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,7 +69,9 @@
 
         <activity android:name=".Activities.ManageGameplayActivity" />
         <activity android:name=".Activities.CardsActivity" />
-        <activity android:name=".Activities.EditCardActivity"></activity>
+        <activity android:name=".Activities.EditCardActivity" />
+        <activity android:name=".Activities.DecksActivity" />
+        <activity android:name=".Activities.EditDeckActivity"></activity>
     </application>
 
 </manifest>
