--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,9 +69,12 @@
 
         <activity android:name=".Activities.ManageGameplayActivity" />
         <activity android:name=".Activities.CardsActivity" />
-        <activity android:name=".Activities.EditCardActivity" />
         <activity android:name=".Activities.DecksActivity" />
-        <activity android:name=".Activities.EditDeckActivity"></activity>
+        <activity android:name=".Activities.EditDeckActivity"></activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
+     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
     </application>
 
 </manifest>
