--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ buildscript {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -51,4 +51,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
     compile 'com.google.android.gms:play-services-appindexing:8.4.0'
+    compile files('src/main/java/com/seniordesign/wolfpack/quizinator/lib/jinq-all.jar')
 }
