added activeandroid lib

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
+    //add support for active android
+    //database ORM
+    compile files('libs/activeandroid-3.0.jar')
 }
