--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,5 +73,7 @@
         <service android:name=".WifiDirect.ConnectionService"
             android:enabled="true" />
 
+        <meta-data android:name="AA_DB_NAME" android:value="wumbo" />
+        <meta-data android:name="AA_DB_VERSION" android:value="1" />
     </application>
 </manifest>
