--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
+    // import FilePicker
+    // @url -> https://android-arsenal.com/details/1/3950
+    compile 'com.github.angads25:filepicker:1.1.0'
+
 }
