--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,7 @@
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize"
             android:theme="@style/AppTheme.NoActionBar" />
+
         <activity
             android:name=".activities.MainMenuActivity"
             android:label="@string/app_name"
@@ -82,6 +83,16 @@
                 <action android:name="android.net.wifi.p2p.CONNECTION_STATE_CHANGE" />
             </intent-filter>
         </receiver>
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.seniordesign.wolfpack.quizinator"
+            android:grantUriPermissions="true"
+            android:exported="false">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/filepaths" />
+        </provider>
 
         <service android:name=".wifiDirect.ConnectionService"
             android:enabled="true" />
